--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,12 @@
             <artifactId>spring-boot-starter-hateoas</artifactId>
             <version>2.2.1.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
