--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=9090
+# DATABASE CONFIG
+spring.jpa.hibernate.ddl-auto=update
+# H2 CONFIG
+# jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
