Criando uma customização para a validação de idade, com mapper para o mapstruct

--- a/src/main/resources/application-development.properties
+++ b/src/main/resources/application-development.properties
@@ -4,3 +4,5 @@ spring.jpa.hibernate.ddl-auto=update
 # jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+# management.endpoints.web.exposure.include = *
