--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,13 @@
             <artifactId>mapstruct</artifactId>
             <version>1.3.1.Final</version>
         </dependency>
+        <!--
+        ACTUADOR - UPDATE BENNS IN TIME OF EXECUTION
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
