--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>io.github.wendergalan</groupId>
-    <artifactId>hateoas-project</artifactId>
+    <artifactId>person-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>person-api</name>
     <description>Implements person api</description>
