--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: on-failure
     build:
       context: .
-      dockerfile: ./Dockerfile
+      dockerfile: back-end/Dockerfile
     ports:
       - 8080:8080
     command: mvn spring-boot:run
