--- a/front-end/person/package.json
+++ b/front-end/person/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
