--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -11,6 +11,7 @@
     <groupId>io.github.wendergalan</groupId>
     <artifactId>person-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>person-api</name>
     <description>Implements person api</description>
 
