Adicionando o profile de prod para o heroku...

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Profile Active (production - development)
-spring.profiles.active=@activatedProperties@
+#spring.profiles.active=@activatedProperties@
+spring.profiles.active=production
 # DATABASE CONFIG
 spring.jpa.hibernate.ddl-auto=update
 # H2 CONFIG
