Adicionando o profile de development para o heroku...

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Profile Active (production - development)
 #spring.profiles.active=@activatedProperties@
-spring.profiles.active=production
+spring.profiles.active=development
 # DATABASE CONFIG
 spring.jpa.hibernate.ddl-auto=update
 # H2 CONFIG
